--- a/src/src/Templates/Login/index.html.twig
+++ b/src/src/Templates/Login/index.html.twig
@@ -24,7 +24,7 @@
         <hr class="hr mt-5" />
 
         <div class="mt-5 col-md-12 text-center">
-            <a class="btn btn-primary btn-lg" href="/login/sso">Sign In with SSO</a>
+            <a class="btn btn-primary btn-lg" href="/login/sso">Sign In with SSO {{ identityProviderName }}</a>
         </div>
         {% elseif disabledSooReason %}
             <div class="alert alert-danger mt-3" role="alert">
