--- a/src/src/Templates/partials/footer.html.twig
+++ b/src/src/Templates/partials/footer.html.twig
@@ -1,6 +1,6 @@
     <footer style="text-align: center">
-        {% if app.session.get('login_method')  %}
-            <p>Logged using {{ app.session.get('login_method') }}</p>
+        {% if app.session.get(constant('App\\Service\\AuthManager::_LOGIN_METHOD'))  %}
+            <p>Logged using {{ app.session.get(constant('App\\Service\\AuthManager::_LOGIN_METHOD')) }}</p>
         {% endif %}
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
